Se agrega archivo de estilo (.css) Y se soluciona el error de que muestra la matriz antigua.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="estilo.css" media="screen" />
 
     </head>
     <body>
@@ -29,7 +30,7 @@
         <script src="creador.js"></script>
         <div id="seccion-resolucion">
             <form style="text-align:center" name="forma1" autocomplete="on">
-                <input type="button" alt="submit" onClick="resolver();" value="Resolver Laberinto" style="margin-top:30px;" />
+                <input type="button" alt="submit" onClick="resolver();" value="Resolver Laberinto" style="margin-top:50px;" />
             </form>
         </div>
 
