--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <script src="creador.js"></script>
         <div id="seccion-resolucion">
             <form style="text-align:center" name="forma1" autocomplete="on">
-                <input type="button" alt="submit" onClick="resolver();" value="Resolver Laberinto" style="margin-top:30px;" />
+                <input type="button" alt="submit" onClick="draw();" value="Dibujar" style="margin-top:30px;" />
             </form>
+            <form style="text-align:center; margin-top: 30px;">
+                <canvas id="canvas" width="300" height="300"></canvas>
+            </form>
+            
         </div>
 
     </body>
