Se agrega posible opción para generar el laberinto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <table style="margin:0 auto;">
                     <tr>
                         <td style="float:right;">Alto:</td>
-                        <td><input type="text" id="height" name="height" autofocus="autofocus" maxlength="2" size="6" /></td>
+                        <td><input type="text" id="altura" name="altura" autofocus="autofocus" maxlength="2" size="6" /></td>
                     </tr>
                     <tr>
                         <td style="float:right;">Ancho:</td>
-                        <td><input type="text" id="width" name="width"  maxlength="2" size="6" /></td>
+                        <td><input type="text" id="ancho" name="ancho"  maxlength="2" size="6" /></td>
                     </tr>
                 </table>
                 <input type="button" alt="submit" onClick="datos();" value="Generar Laberinto" style="margin-top:10px;" />
