SE RESUELVE CTM

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
         <!-- Seccion resolver-->
         <pre id="out"></pre>
+        <pre id="out2"></pre>
         <script src="creador.js"></script>
         <div id="seccion-resolucion">
             <form style="text-align:center" name="forma1" autocomplete="on">
