--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
         <link rel="stylesheet" href="estilo.css" media="screen" />
     </head>
     <body>
+        <!--Seccion Instrucciones-->
         <div class="container text-center py-5">
-            <h1 class="display-3 py-5">Resolución de Laberintos</h1>
+            <h1 class="display-3 py-5" style="text-align:center">Resolución de Laberintos</h1>
             <p>Instrucciones de uso:</p>
             <li>
-                Cada vez que se quiera volver a generar se debe presionar "limpiar".
+                Según el tamaño el laberinto podría tomar mas tiempo en generarse.
             </li>
             <li>
-                El laberinto puede ser de maximo 99 x 99.
+                El laberinto puede ser de máximo 99 x 99.
+            </li>
+            <li>
+                Tras Ingresar los datos, se debe presionar "Generar Laberinto".
+            </li>
+            <li>
+                Debe esperar a que se dibuje, no presionar "Generar Laberinto" más de una vez
+            </li>
+            <li>
+                Para mostrar la solución se debe presionar el botón "Resolver".
+            </li>
+            <li>
+                Cada vez que se quiera volver a generar otro laberinto, se debe presionar "Limpiar".
             </li>
         </div>
         <!-- Seccion recibir datos, generar y dibujar-->
@@ -39,12 +52,10 @@
             </form>
         </div>
         <!-- Seccion resolver-->
-        <pre id="out"></pre>
-        <pre id="out2"></pre>
         <script src="creador.js"></script>
         <div id="seccion-resolucion">
             <form style="text-align:center" name="forma1" autocomplete="on">
-                <input type="button" alt="submit" onClick="resolverLaberinto(ancho,alto);" value="Resolver" style="margin-top:10px;" />
+                <input type="button" alt="submit" onClick="mostrarLaberintoResuelto(ruta);" value="Resolver" style="margin-top:10px;" />
             </form>
             <form style="text-align:center; margin-top: 30px;">
                 <canvas id="canvas" width="900" height="900"></canvas>
