--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+Integrantes:
+    -Pablo Castillo     (RUT: 20.858.272-0)
+    -Tomas Cayul        (RUT: 20.722.016-7)
+    -Victor Guzman      (RUT: 20.456.492-2)
+    -Roberto Jorquera   (RUT: 20.846.312-8)
+    -Victor Ubeda       (RUT: 21.041.812-1)
+Seccion: 411.
+Fecha: 04/12/2022
+Asignatura: Grafos y lenguajes formales.
+Profesor: Michael Emil Cristi Capstick
+Carrera: Ingenieria Civil en Computacion mencion Informatica
+-->
 <!DOCTYPE html>
 <html>
     <head>
